test/expected/perr_case_bad_pattern_separator.out
shit: 2:19: error: Expected '|' or ')' in a case pattern.
     2 |  case x in a) y;; b
       |                    ^~ here.
